deployment-app-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-app-python-server
spec:
  replicas: 4
  selector:
    matchLabels:
      app: app-python-server
  template:
    metadata:
      labels:
        app: app-python-server
    spec:
      containers:
      - name: image-python-server
        image: python:2.7
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        command: ["/bin/bash"]
        args: ["-c", "echo \"<p>Hello from $(hostname)</p>\" > index.html; python -m SimpleHTTPServer 8080"]
        ports:
        - containerPort: 8080
