service_clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-claster-ip-python-server
spec:
  type: ClusterIP # default type is ClusterIP
  selector:
    app: app-python-server
  ports:
  - port: 80
    targetPort: 8080
