service_loadbalance.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-python-server
spec:
  type: LoadBalancer
  selector:
    app: python-server
  ports:
  - port: 80
    targetPort: 8080
