service_ingress.yaml
# Run following command if using NGINX controller
# NGINX controller: kubectl apply -f https://raw.githubusercontent.com/kubernetes/ingress-nginx/controller-v1.2.0/deploy/static/provider/aws/deploy.yaml

# Run following command if using xxx controller
# xxx controller: 
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: service-ingress-class-nginx
spec:
  controller: k8s.io/ingress-nginx
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: service-ingress-nginx
  annotations:
    # kubernetes.io/ingress.class: nginx
    # for TLS cert in issuer.yaml
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: service-ingress-class-nginx
  rules:
  - host: "api.tcpip.cloud"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: service-claster-ip-python-server
            port:
              number: 80
  # for TLS cert in issuer.yaml
  tls: 
  - hosts:
    - api.tcpip.cloud
    secretName: service-ingress-nginx-python-server-cert
